proptest-derive2/tests/compile-fail/E0002-no-unions.rs
#[macro_use]
extern crate proptest_derive;

#[derive(Arbitrary)] //~ ERROR: [proptest_derive, E0002]
union Foo { x: usize }